tests/ui/traits/next-solver/normalize/two-projection-param-candidates-are-ambiguous.stderr
error[E0284]: type annotations needed: cannot normalize `<T as Foo>::Assoc`
  --> $DIR/two-projection-param-candidates-are-ambiguous.rs:26:17
   |
LL |     needs_bar::<T>();
   |                 ^ cannot normalize `<T as Foo>::Assoc`
   |
note: required for `T` to implement `Bar`
  --> $DIR/two-projection-param-candidates-are-ambiguous.rs:21:9
   |
LL | impl<T> Bar for T where T: Foo<Assoc = i32> {}
   |         ^^^     ^              ----------- unsatisfied trait bound introduced here
note: required by a bound in `needs_bar`
  --> $DIR/two-projection-param-candidates-are-ambiguous.rs:23:17
   |
LL | fn needs_bar<T: Bar>() {}
   |                 ^^^ required by this bound in `needs_bar`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0284`.
